Fixed rows on mobile

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
 
     .card {
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 3fr;
+        grid-template-rows: 7.5rem 1fr;
         gap: 0; 
         max-width: 20.5rem;
         margin: auto; 
